# aws-data-pipelines

./: app.py  pyproject.toml
