[tool.poetry]
name = "aws-data-pipelines"
version = "0.1.0"
description = ""
authors = ["Dendi Handian <contact.dendi@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
awswrangler = "^3.9.1"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
